	PR middle-end/41347 	* tree.c (build_type_attribute_qual_variant): Export. 	* tree.h (build_type_attribute_qual_variant): Declare. 	* tree-inline.c (remap_type_1): Use it to build variants with 	the original qualifiers and attributes.

testsuite/
	* gfortran.dg/pr41347.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@151799 138bc75d-0d04-0410-961f-82ee72b054a4